# photoshop-plugin-starter

./: .gitignore  CMakeLists.txt  LICENSE  README.md  define.h  main.cpp  pipl.r
cert/: .gitignore
platform/: Info.plist
sdk/: .gitignore
tools/: .gitignore
